<resources>
    <!--Nom interne-->
    <string name="app_name">Speedquiz</string>
    <!-- Ecran d'accueil -->
        <!-- Menu-->
        <string name="action_settings">Settings</string>
        <string name="action_question">Add a question</string>
        <string name="main_button_player">Add player</string>
        <string name="main_button_play">Play</string>
            <!--Setting-->
            <string name="settings_timeQuestion">Response time </string>
            <string name="settings_switch_nightMode">Night mod</string>
            <string name="settings_button_save">Save</string>
            <string name="settings_button_close">Close</string>
            <!--Questions-->
            <string name="questions_titre"> Add a question</string>
                <!-- TextInput-->
                <string name="questions_textInput">Questions</string>
    <!-- TextInput-->
    <string name="main_textInput_player1">Player 1</string>
    <string name="main_textInput_player2">Player 2</string>
    <string name="main_textInputpref_player">Name</string>
    <!-- Ecran de jeu-->
    <string name="game_button_play">True</string>
    <string name="game_button_replay">Replay</string>
    <string name="game_button_menu">Menu</string>
    <string name="game_result_win">Win</string>
    <string name="game_result_loose">Loose</string>
    <string name="game_result_egalite">Eqalite</string>
</resources>