<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/Main_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="5dp"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/main_settings"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/Main_appBarLayout"
        android:visibility="invisible"
        android:background="@color/black"
        style="@style/Widget.App.Settings">

        <TextView
            android:id="@+id/settings_text_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_text_size"
            android:textColor="@color/white"
            android:layout_margin="@dimen/main_component_space"
            android:text="@string/settings_timeQuestion"/>

        <!-- Discrete slider -->
        <com.google.android.material.slider.Slider
            android:id="@+id/settings_slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_text_question"
            android:valueFrom="1.0"
            android:valueTo="10.0"
            android:stepSize="1.0" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/settings_switch_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_slider"
            android:layout_margin="@dimen/main_component_space"
            android:checked="true"
            style="@style/Widget.App.Switch"
            android:text="@string/settings_switch_nightMode"
            android:textColor="@color/white"
            android:textSize="@dimen/main_text_size"/>

        <Button
            android:id="@+id/settings_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_switch_night"
            android:layout_margin="@dimen/main_component_space"
            android:text="@string/settings_button_save"
            android:textSize="@dimen/main_text_size"/>

        <Button
            android:id="@+id/settings_close"
            style="@style/Widget.App.Button.Close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_switch_night"
            android:layout_margin="@dimen/main_component_space"
            android:layout_alignParentEnd="true"
            android:text="@string/settings_button_close"
            android:textSize="@dimen/main_text_size"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_questions"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/Main_appBarLayout"
        android:visibility="invisible"
        android:background="@color/black"
        style="@style/Widget.App.Settings">

        <TextView
            android:id="@+id/questions_titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_component_space"
            android:textSize="@dimen/main_text_size"
            android:textColor="@color/white"
            android:text="@string/questions_titre"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/questions_textInputLayout_questions"
            style="@style/Widget.App.TextInputLayout.questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/questions_titre"
            android:layout_marginTop="50dp"
            android:layout_margin="10dp"
            android:hint="@string/questions_textInput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/questions_textInput_questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/main_text_size"
                android:inputType="textShortMessage"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/question_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/questions_textInputLayout_questions"
            android:layout_margin="@dimen/main_component_space"
            android:text="@string/settings_button_save"
            android:textSize="@dimen/main_text_size"/>

        <Button
            android:id="@+id/questions_close"
            style="@style/Widget.App.Button.Close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/questions_textInputLayout_questions"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/main_component_space"
            android:layout_marginTop="@dimen/main_component_space"
            android:layout_marginEnd="@dimen/main_component_space"
            android:layout_marginBottom="@dimen/main_component_space"
            android:text="@string/settings_button_close"
            android:textSize="@dimen/main_text_size" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_textInputLayout1"
        style="@style/Widget.App.TextInputLayout.player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_margin="10dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/Main_appBarLayout"
        android:hint="@string/main_textInput_player">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_textInput_player1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/main_text_size"
            android:inputType="textShortMessage"
            android:maxLines="1"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_textInputLayout2"
        style="@style/Widget.App.TextInputLayout.player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_margin="10dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/main_textInputLayout1"
        android:hint="@string/main_textInput_player">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_textInput_player2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/main_text_size"
            android:inputType="textShortMessage"
            android:maxLines="1"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/main_button_addPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_player"
        android:textSize="@dimen/main_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Main_appBarLayout"/>

    <Button
        android:id="@+id/main_button_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_play"
        android:textSize="@dimen/main_text_size"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/main_button_addPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
